Thu Jul 30 19:17:07 1998  Werner Koch  (wk@(none))

	* acinclude.h (WK_CHECK_IPC): New
	* configure.in : Add checks for SysV IPC

Thu Jun 25 11:18:49 1998  Werner Koch  (wk@isil.d.shuttle.de)

	* configure.in (--disable-dynload): New.

Wed Jun 10 07:48:59 1998  Werner Koch,mobil,,,	(wk@tobold)

	* configure.in (GNUPG_LIBDIR): New.

Mon May 25 19:10:59 1998  Werner Koch  (wk@isil.d.shuttle.de)

	* rand-unix.c (fast_random_poll): fixed syntax bug.

Mon May 11 10:21:31 1998  Werner Koch  (wk@isil.d.shuttle.de)

	* configure.in (PRINTABLE_OS_NAME): Linux is now GNU/Linux

Tue Apr 14 19:08:05 1998  Werner Koch  (wk@isil.d.shuttle.de)

	* [all files]: Applied Matthew Skala's typo and grammar fixes.

Wed Mar  4 10:32:40 1998  Werner Koch  (wk@isil.d.shuttle.de)

	* configure.in (getrusage,gettimeofday): New tests.

Fri Feb 27 13:14:17 1998  Werner Koch  (wk@isil.d.shuttle.de)

	* configure.in (--disable-m-guard): New.

Thu Feb 26 17:09:27 1998  Werner Koch  (wk@isil.d.shuttle.de)

	* configure.in, acinclude.m4, intl/, po/: New macros taken
	from GNOME, switched to automake 1.2f

Thu Feb 26 09:05:46 1998  Werner Koch  (wk@isil.d.shuttle.de)

	* configure.in (doc/Makefile): New

Thu Feb 26 07:40:47 1998  Werner Koch  (wk@isil.d.shuttle.de)

	* configure.in: Changed gettext stuff

Wed Feb 25 11:44:10 1998  Werner Koch  (wk@isil.d.shuttle.de)

	* checks/*test : restructured the directory.

Tue Feb 24 15:59:12 1998  Werner Koch  (wk@isil.d.shuttle.de)

	* configure.in: Changed the name of the package to GNUPG and
	chnaged several other names too.

Wed Feb 18 17:36:45 1998  Werner Koch  (wk@isil.d.shuttle.de)

	* Makefile.am (checks): New.

Sat Feb 14 15:37:55 1998  Werner Koch  (wk@isil.d.shuttle.de)

	* configure.in (mpi_config_done): Removed asm links caching.

Sat Feb 14 14:02:20 1998  Werner Koch  (wk@isil.d.shuttle.de)

	* configure.in (PRINTABLE_OS_NAME): New.
	* acconfig.h: Likewise.

Fri Feb 13 19:43:41 1998  Werner Koch  (wk@isil.d.shuttle.de)
