@@ -27,6 +27,8 @@ Mark Adler		madler@alumni.caltech.edu
 Martin Schulte		schulte@thp.uni-koeln.de
 Matthew Skala		mskala@ansuz.sooke.bc.ca
 Max Valianskiy		maxcom@maxcom.ml.org
+Michael Roth		mroth@nessie.de
+Michael Sobolev 	mss@despair.transas.com
 Nicolas Graner		Nicolas.Graner@cri.u-psud.fr
 Niklas Hernaeus 	nh@sleipner.df.lth.se
 Nimrod Zimerman 	zimerman@forfree.at
@@ -37,6 +39,7 @@ QingLong		qinglong@bolizm.ihep.su
 Ralph Gillen		gillen@theochem.uni-duesseldorf.de
 Serge Munhoven		munhoven@mema.ucl.ac.be
 Steffen Ullrich 	ccrlphr@xensei.com
+Steffen Zahn		Steffen.Zahn@oen.siemens.de
 Thomas Roessler 	roessler@guug.de
 Tom Spindler		dogcow@home.merit.edu
 Tom Zerucha		tzeruch@ceddec.com
