@@ -4,3 +4,4 @@ install-sh
 mkinstalldirs
 mkdiff
 missing
+gnupg.spec
